chore: remove redundant endpoint
